--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	background-color: #eee;
+	background-color: #63316B;
 }
 
 button {
@@ -27,7 +27,7 @@ header {
 	display: block;
 	width: 100%;
 	height: 70px;
-	box-shadow: 0 0 10px #aaa;
+	box-shadow: 0 0 10px #ccc;
 	background-color:black;
 	opacity: 0.9;
 }
@@ -76,18 +76,18 @@ header button {
 }
 
 #sitename {
+	font-family: "Special Elite", cursive;
 	float: left;
 	padding: 15px 11px;
 	height: 100%;
-	background-color: #92afcc;
-	font-size: 23px;
-	font-weight: bold;
+	background-color: black;
+	font-size: 20px;
 	color: #fff;
 	opacity: 0.7;
 }
 
 #cover {
-	width: 100%;
+	text-align: center;
 }
 
 .story-body {
@@ -218,7 +218,8 @@ header button {
 }
 
 #container {
-	margin-bottom: 200px;
+	margin-bottom: 100px;
+	text-align: center;
 }
 
 footer {
