--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,12 +4,13 @@
 	<meta charset="UTF-8">
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
 		<title>New York Times Scraper</title>
 </head>
 
 <body>
 	<header>
-		<a href="/"><div id="sitename">NYT Scraper</div></a>
+		<a href="/"><div id="sitename">New York Times Article Scraper</div></a>
 		<a href="/"><button id="all-articles">All Articles</button></a>
 		<a href="/saved"><button id="saved-articles">Saved Articles</button></a>
 		<form action="/scrape" method="GET">
@@ -17,10 +18,12 @@
 		</form>
 		<form action="/search" method="POST">
 			<button type="submit" id="search-submit">Submit</button>
-			<input type="text" name="search" placeholder="Search for articles" id="search-input">
+			<input type="text" name="search" placeholder="Search for Articles" id="search-input">
 		</form>
 	</header>
-	<img id="cover" src="/assets/images/cover.jpg" height="500px">
+	<div id="container">
+	<img id="cover" src="/assets/images/newsscraper.gif" height="500px">
+	</div>
 	<div id="container">
 		{{{ body }}}
 	</div>
@@ -42,7 +45,7 @@
 		</div>
 	</div>
 	
-	<footer>© Copyright Rupali Meshram</footer>
+	<footer>Copyright 2020, Kate Laney</footer>
 	<script src="/assets/javascript/app.js"></script>
 </body>
 </html>
