--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -43,14 +43,20 @@ header button {
 
 #all-articles {
 	background-color: #999;
+	font-family: 'Special Elite', cursive;
+	color: black;
 }
 
 #saved-articles {
 	background-color: #aaa;
+	font-family: 'Special Elite', cursive;
+	color: black;
 }
 
 #refresh-articles {
 	background-color: #bbb;
+	font-family: 'Special Elite', cursive;
+	color: black;
 }
 
 #all-articles:hover, #saved-articles:hover, #refresh-articles:hover {
@@ -65,6 +71,7 @@ header button {
 	min-width: 200px;
 	border-radius: 5px;
 	margin-top: 10px;
+	font-family: 'Special Elite', cursive;
 }
 
 #search-submit {
@@ -73,6 +80,8 @@ header button {
 	margin-top: 10px;
 	height: 63%;
 	margin-right: 10px;
+	font-family: 'Special Elite', cursive;
+	color: black;
 }
 
 #sitename {
@@ -96,10 +105,12 @@ header button {
 	min-height: 200px;
 	box-shadow: 0 0 10px #aaa;
 	background-color: #fff;
+	font-family: 'Special Elite', cursive;
 }
 
 .story-body h2 {
 	background-color: #3e9cfc;
+	font-family: 'Special Elite', cursive;
 }
 
 .story-body a {
@@ -108,6 +119,7 @@ header button {
 	width: 77%;
 	color: #fff;
 	padding-left: 10px;
+	font-family: 'Special Elite', cursive;
 }
 
 .story-body button {
@@ -117,6 +129,7 @@ header button {
 	color: #fff;
 	font-weight: bold;
 	font-size: 22px;
+	font-family: 'Special Elite', cursive;
 }
 
 .story-body button:hover {
@@ -232,7 +245,8 @@ footer {
 	background-color: black;
 	color: #ddd;
 	font-size: 15px;
-	border-top: 8px solid #3e9cfc;
+	border-top: 8px solid #63316B;
 	opacity: 0.7;
 	z-index: 3;
+	font-family: 'Special Elite', cursive;
 }
