--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,10 +14,10 @@
 		<a href="/"><button id="all-articles">All Articles</button></a>
 		<a href="/saved"><button id="saved-articles">Saved Articles</button></a>
 		<form action="/scrape" method="GET">
-			<button type="submit" id="refresh-articles">Scrape For Newest Articles</button>
+			<button type="submit" id="refresh-articles">Scrape</button>
 		</form>
 		<form action="/search" method="POST">
-			<button type="submit" id="search-submit">Submit</button>
+			<button type="submit" id="search-submit">Search</button>
 			<input type="text" name="search" placeholder="Search for Articles" id="search-input">
 		</form>
 	</header>
